[project]
name = "duffel-mcp"
version = "1.0.0"
description = "MCP server for Duffel flight booking API"
authors = [{name = "Your Name"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
duffel-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
